--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
  <meta charset="UTF-8">
  <title> ZM19124李一誠　後期プロジェクト</title>
      <link rel="stylesheet" href="mystyle.css">
-     
-    <script src="ex1-1.js"></script>
-    <script src="ex1-2.js"></script>
+<script src="ex1-1.js"></script>
+<script src="ex1-2.js"></script>
 
 </head>
 
@@ -14,6 +13,9 @@
 <h1 class="important">自己紹介</h1>
 <p class="sample1">私の出身地は中国の大連です。もう日本に来て5年になりました。</p>
 <p>下の図は大連の風景です。ボタンを押して2秒を待ったら他の写真があります</p>
-      <input type="button" value="3秒で変更" onclick="ThreeSecChange();">
-  <img src='./image/josai.png' id="logo2" alt="Josai Logo">
+      <input type="button" value="2秒で変更" onclick="ThreeSecChange();">
+  <img src='./morning.jpg' id="logo2" alt="morning Logo">
   <br>
+
+</body>
+</html>
