--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p class="sample1">私の出身地は中国の大連です。もう日本に来て5年になりました。</p>
 <p>下の図は大連の風景です。ボタンを押して2秒を待ったら他の写真があります</p>
       <input type="button" value="2秒で変更" onclick="ThreeSecChange();">
-  <img src='/night.jpg' id="logo2" alt="night Logo">
+  <img src='night.jpg' id="logo2" alt="night Logo">
   <br>
 
 <h1 class="important">好きなゲームとキャラクター</h1>
@@ -27,16 +27,16 @@
 <br>
     <div id="image1" >
       <input type="button" value="？？？？に変更" onclick="imgchange1();">
-  <img src='/BLAZBLUE.JPG' id="logo" alt="BLAZBLUE Logo"></div>
+  <img src='BLAZBLUE.JPG' id="logo" alt="BLAZBLUE Logo"></div>
   <br>
 
 <h1 class="important">おすすめの大連の郷土料理</h1>
 <p class="sample3">中国に来る機会があればぜひ食べてみてください！</p>
 
-<img src="./sanxianmenzi.jpg" alt="sanxianmenzi">
+<img src="sanxianmenzi.jpg" alt="sanxianmenzi">
 <br>
 <p class="sample3">三鲜焖子</p>
-<img src="./tiebanqiezi.jpg" alt="tiebanqiezi">
+<img src="tiebanqiezi.jpg" alt="tiebanqiezi">
 <br>
 <p class="sample3">铁板茄子</p>
 
